# study-O-code

./: AI Coding Rules  Readme.md
AHK/: CompileRun.ahk  defltbase.jfm  (+5 more)
flutter_folder/block_run/: CMakeLists.txt  README.md  pubspec.yaml  test.md
flutter_folder/block_run/android/: .project
flutter_folder/block_run/android/app/: build.gradle.kts
flutter_folder/block_run/android/app/src/main/: AndroidManifest.xml
flutter_folder/block_run/android/app/src/main/kotlin/com/example/block_run/: MainActivity.kt
flutter_folder/block_run/assets/migrations/: 0001_init.sql
flutter_folder/block_run/ios/Runner/: Info.plist
flutter_folder/block_run/ios/Runner.xcodeproj/: project.pbxproj
flutter_folder/block_run/lib/: main.dart
flutter_folder/block_run/lib/core/: ffi_bindings.dart
flutter_folder/block_run/lib/database/: database_helper.dart
flutter_folder/block_run/lib/game_engine/: game_controller.dart
flutter_folder/block_run/lib/views/: game_screen.dart  main_menu.dart
flutter_folder/block_run/linux/: CMakeLists.txt
flutter_folder/block_run/linux/runner/: my_application.cc
flutter_folder/block_run/macos/Runner.xcodeproj/: project.pbxproj
flutter_folder/block_run/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_folder/block_run/macos/Runner/Configs/: AppInfo.xcconfig
flutter_folder/block_run/src/: game_renderer.c
flutter_folder/block_run/test/: widget_test.dart
flutter_folder/block_run/web/: index.html  manifest.json
flutter_folder/block_run/windows/: CMakeLists.txt
flutter_folder/block_run/windows/runner/: Runner.rc  main.cpp
(+330 files in other folders)
